<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driver_menu">
    <include layout="@layout/my_toolbar"/>
    <TextView
        android:id="@+id/welcome_driver"
        android:layout_width="335dp"
        android:layout_height="107dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="102dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/welcome_driver"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_rute1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_rute1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="33dp"
        android:background="@color/black"
        android:text="@string/btn_rute1"
        app:layout_constraintBottom_toTopOf="@+id/btn_rute2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_driver" />

    <Button
        android:id="@+id/btn_rute2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="28dp"
        android:background="@color/black"
        android:text="@string/btn_rute2"
        app:layout_constraintBottom_toTopOf="@+id/btn_rute3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rute1" />

    <Button
        android:id="@+id/btn_rute3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="30dp"
        android:background="@color/black"
        android:text="@string/btn_rute3"
        app:layout_constraintBottom_toTopOf="@+id/btn_rute4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rute2" />

    <Button
        android:id="@+id/btn_rute4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="121dp"
        android:background="@color/black"
        android:text="@string/btn_rute4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rute3" />

</androidx.constraintlayout.widget.ConstraintLayout>