<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_menu">

    <TextView
        android:id="@+id/welcome_user"
        android:layout_width="339dp"
        android:layout_height="113dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="102dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/welcome_user"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_rute1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_rute1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="33dp"
        android:background="@color/black"
        android:text="@string/btn_rute1"
        app:layout_constraintBottom_toTopOf="@+id/btn_rute2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_user" />

    <Button
        android:id="@+id/btn_rute2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="28dp"
        android:background="@color/black"
        android:text="@string/btn_rute2"
        app:layout_constraintBottom_toTopOf="@+id/btn_rute3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rute1" />

    <Button
        android:id="@+id/btn_rute3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="30dp"
        android:background="@color/black"
        android:text="@string/btn_rute3"
        app:layout_constraintBottom_toTopOf="@+id/btn_rute4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rute2" />

    <Button
        android:id="@+id/btn_rute4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="121dp"
        android:background="@color/black"
        android:text="@string/btn_rute4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rute3" />

    <ImageView
        android:id="@+id/id_back3"
        android:layout_width="46dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

</androidx.constraintlayout.widget.ConstraintLayout>